TOMAHAWK-1044: Use Integer constructor rather than Integer.valueOf, for Java 1.4 compatibility
git-svn-id: http://svn.apache.org/repos/asf/myfaces/tomahawk/trunk@553474 13f79535-47bb-0310-9956-ffa450edef68